Incorrect assignment of layers to compositor nodes in 2.8 when reading 2.79 .blend #61520

Closed
opened 2019-02-13 22:26:39 +01:00 by Brian Swift · 6 comments

System Information
Operating system: macOS 10.13.6
Graphics card: AMD Radeon R9 M370X 2048 MB

Blender Version
Broken: 2.80 2019-02-13
Worked: 2.79b 2018-03-22

Short description of error
When the attached .blend file (created in 2.79b) is opened in 2.80 2019-02-13
the the compositor Render Layer nodes have wrong scene render layers.
The attached screen shots highlight the issue.

Exact steps for others to reproduce the error
Open attached P00_102c.blend in 2.80
View Compositing Node Editor

Correct setup in 2.79b
Compositor2.79b.png

Wrong setup when opened in 2.80
Compositor2.80.png

Blender file
P00_102c.blend

**System Information** Operating system: macOS 10.13.6 Graphics card: AMD Radeon R9 M370X 2048 MB **Blender Version** Broken: 2.80 2019-02-13 Worked: 2.79b 2018-03-22 **Short description of error** When the attached .blend file (created in 2.79b) is opened in 2.80 2019-02-13 the the compositor Render Layer nodes have wrong scene render layers. The attached screen shots highlight the issue. **Exact steps for others to reproduce the error** Open attached P00_102c.blend in 2.80 View Compositing Node Editor Correct setup in 2.79b ![Compositor2.79b.png](https://archive.blender.org/developer/F6602400/Compositor2.79b.png) Wrong setup when opened in 2.80 ![Compositor2.80.png](https://archive.blender.org/developer/F6602407/Compositor2.80.png) Blender file [P00_102c.blend](https://archive.blender.org/developer/F6602411/P00_102c.blend)
Author

Added subscriber: @bswift

Added subscriber: @bswift
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 87bba05d25

This issue was referenced by 87bba05d25e085c83e2c9dfb172048f150cd740c
Member

Looks like this is caused by adding a vanilla "Viewport" viewlayer and making it the first in the list here
(special case in do_version_layers_to_collections() if there are layer overrides...)

/* Make it first in the list. */
BLI_remlink(&scene->view_layers, view_layer);
BLI_addhead(&scene->view_layers, view_layer);

Render Layers node stores an index to viewlayers afaics and by just making a new viewlayer the first here is shifting all others by one...
Not sure why the new vanilla "Viewport" viewlayer needs to be the first in the list?
If that needs to be the case, then Render Layers nodes indices need to be corrected as well, I guess.
But just removing the "push-to-head" for the new vanilla viewlayer also solves this issue: D4352

Looks like this is caused by adding a vanilla "Viewport" viewlayer and making it the first in the list [here ](https://developer.blender.org/diffusion/B/browse/master/source/blender/blenloader/intern/versioning_280.c$519) (special case in `do_version_layers_to_collections()` if there are layer overrides...) ``` /* Make it first in the list. */ BLI_remlink(&scene->view_layers, view_layer); BLI_addhead(&scene->view_layers, view_layer); ``` `Render Layers` node stores an index to viewlayers afaics and by just making a **new** viewlayer the first here is shifting all others by one... Not sure why the new vanilla "Viewport" viewlayer needs to be the first in the list? If that **needs** to be the case, then Render Layers nodes indices need to be corrected as well, I guess. But just removing the "push-to-head" for the new vanilla viewlayer also solves this issue: [D4352](https://archive.blender.org/developer/D4352)
Brecht Van Lommel was assigned by Philipp Oeser 2019-02-14 11:02:30 +01:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61520
No description provided.