Fix T61520: Incorrect assignment of layers to compositor nodes in 2.8 when reading 2.79 .blend

Reviewers: brecht

Maniphest Tasks: T61520

Differential Revision: https://developer.blender.org/D4352